Correction bug CSS text-align (#3359)

--- a/apps/transport/client/stylesheets/components/_dataset-details.scss
+++ b/apps/transport/client/stylesheets/components/_dataset-details.scss
@@ -591,7 +591,9 @@ hr {
   border-bottom: 1px solid var(--theme-border-lighter);
 }
 
-.discussion, #notifications-sent, #backed-up-resources .displayMore {
-  text-align: center;
-  margin-bottom: 1em;
+.discussion, #notifications-sent, #backed-up-resources {
+  .displayMore {
+    text-align: center;
+    margin-bottom: 1em;
+  }
 }
